// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should create a complete heading 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 24,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
          "width": "100%",
        },
      ]
    }
    w="100%"
  >
    <View
      alignItems="center"
      flexDirection="row"
      justifyContent="space-between"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <TouchableWithoutFeedback>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            disabled={false}
            pressed={false}
            secondary={false}
            style={
              Array [
                Object {
                  "color": "#D8385E",
                  "fontFamily": "Rubik",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
              ]
            }
          >
            <RNSVGSvgView
              bbHeight={20}
              bbWidth={20}
              fill="#D8385E"
              focusable={false}
              height={20}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Array [
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ],
                  Object {
                    "opacity": 1,
                  },
                  Object {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              width={20}
            >
              <RNSVGGroup
                fill={
                  Array [
                    0,
                    4292360286,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                font={Object {}}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGSvgView>
          </Text>
        </View>
      </TouchableWithoutFeedback>
      <Text
        style={
          Array [
            Object {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
            },
          ]
        }
      >
        Page Title
      </Text>
      <View
        flexDirection="row"
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <TouchableWithoutFeedback
          isFirst={true}
          style={
            Array [
              Object {
                "paddingLeft": 24,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              disabled={false}
              isFirst={true}
              pressed={false}
              secondary={false}
              style={
                Array [
                  Object {
                    "color": "#D8385E",
                    "fontFamily": "Rubik",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  Object {
                    "paddingLeft": 24,
                  },
                ]
              }
            >
              <RNSVGSvgView
                bbHeight={20}
                bbWidth={20}
                fill="#D8385E"
                focusable={false}
                height={20}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Array [
                      Object {
                        "height": 20,
                        "width": 20,
                      },
                    ],
                    Object {
                      "opacity": 1,
                    },
                    Object {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                width={20}
              >
                <RNSVGGroup
                  fill={
                    Array [
                      0,
                      4292360286,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  font={Object {}}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth={1}
                  vectorEffect={0}
                  x={0}
                  y={0}
                />
              </RNSVGSvgView>
            </Text>
          </View>
        </TouchableWithoutFeedback>
        <TouchableWithoutFeedback
          isFirst={false}
          style={
            Array [
              Object {
                "paddingLeft": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              disabled={false}
              isFirst={false}
              pressed={false}
              secondary={false}
              style={
                Array [
                  Object {
                    "color": "#D8385E",
                    "fontFamily": "Rubik",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  Object {
                    "paddingLeft": 0,
                  },
                ]
              }
            >
              <RNSVGSvgView
                bbHeight={20}
                bbWidth={20}
                fill="#D8385E"
                focusable={false}
                height={20}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Array [
                      Object {
                        "height": 20,
                        "width": 20,
                      },
                    ],
                    Object {
                      "opacity": 1,
                    },
                    Object {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                width={20}
              >
                <RNSVGGroup
                  fill={
                    Array [
                      0,
                      4292360286,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  font={Object {}}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth={1}
                  vectorEffect={0}
                  x={0}
                  y={0}
                />
              </RNSVGSvgView>
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 20,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#231B22",
                "fontFamily": "Rubik",
                "fontSize": 24,
                "fontWeight": "500",
                "lineHeight": 32,
              },
            ]
          }
        >
          Title
        </Text>
        <Text
          color="deep"
          style={
            Array [
              Object {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
        >
          Subtitle
        </Text>
      </View>
      
    </View>
  </View>
</View>
`;

exports[`<Heading /> should create a heading without title 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 24,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
          "width": "100%",
        },
      ]
    }
    w="100%"
  >
    <View
      alignItems="center"
      flexDirection="row"
      justifyContent="space-between"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <TouchableWithoutFeedback>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            disabled={false}
            pressed={false}
            secondary={false}
            style={
              Array [
                Object {
                  "color": "#D8385E",
                  "fontFamily": "Rubik",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
              ]
            }
          >
            <RNSVGSvgView
              bbHeight={20}
              bbWidth={20}
              fill="#D8385E"
              focusable={false}
              height={20}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Array [
                    Object {
                      "height": 20,
                      "width": 20,
                    },
                  ],
                  Object {
                    "opacity": 1,
                  },
                  Object {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              width={20}
            >
              <RNSVGGroup
                fill={
                  Array [
                    0,
                    4292360286,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                font={Object {}}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGSvgView>
          </Text>
        </View>
      </TouchableWithoutFeedback>
      <Text
        style={
          Array [
            Object {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
            },
          ]
        }
      >
        Page Title
      </Text>
      <View
        flexDirection="row"
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <TouchableWithoutFeedback
          isFirst={true}
          style={
            Array [
              Object {
                "paddingLeft": 24,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              disabled={false}
              isFirst={true}
              pressed={false}
              secondary={false}
              style={
                Array [
                  Object {
                    "color": "#D8385E",
                    "fontFamily": "Rubik",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  Object {
                    "paddingLeft": 24,
                  },
                ]
              }
            >
              <RNSVGSvgView
                bbHeight={20}
                bbWidth={20}
                fill="#D8385E"
                focusable={false}
                height={20}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Array [
                      Object {
                        "height": 20,
                        "width": 20,
                      },
                    ],
                    Object {
                      "opacity": 1,
                    },
                    Object {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                width={20}
              >
                <RNSVGGroup
                  fill={
                    Array [
                      0,
                      4292360286,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  font={Object {}}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth={1}
                  vectorEffect={0}
                  x={0}
                  y={0}
                />
              </RNSVGSvgView>
            </Text>
          </View>
        </TouchableWithoutFeedback>
        <TouchableWithoutFeedback
          isFirst={false}
          style={
            Array [
              Object {
                "paddingLeft": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              disabled={false}
              isFirst={false}
              pressed={false}
              secondary={false}
              style={
                Array [
                  Object {
                    "color": "#D8385E",
                    "fontFamily": "Rubik",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  Object {
                    "paddingLeft": 0,
                  },
                ]
              }
            >
              <RNSVGSvgView
                bbHeight={20}
                bbWidth={20}
                fill="#D8385E"
                focusable={false}
                height={20}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Array [
                      Object {
                        "height": 20,
                        "width": 20,
                      },
                    ],
                    Object {
                      "opacity": 1,
                    },
                    Object {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                width={20}
              >
                <RNSVGGroup
                  fill={
                    Array [
                      0,
                      4292360286,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  font={Object {}}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth={1}
                  vectorEffect={0}
                  x={0}
                  y={0}
                />
              </RNSVGSvgView>
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
    </View>
  </View>
</View>
`;
